--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,7 +145,7 @@
 
     /* Hero Section */
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1507692049790-de58290a4334?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('background.jpg');
       background-size: cover;
       background-position: center;
       min-height: 70vh;
@@ -510,7 +510,7 @@
   <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
-        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&h=100&q=80" alt="Holy Spirit Prayer House Logo">
+        <img src="logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
       <nav class="desktop-nav">
         <ul class="nav-links">
@@ -595,12 +595,12 @@
   <section class="founders-section">
     <div class="founder-container">
       <div class="founder">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" alt="Founder Image" class="founder-img">
+        <img src="founder.jpg" alt="Founder Image" class="founder-img">
         <h2><span class="english-text">Founder</span><span class="telugu-text">స్థాపకుడు</span></h2>
         <h3><span class="english-text">Pastor P. Moses</span><span class="telugu-text">పాస్టర్ పి. మోసెస్</span></h3>
       </div>
       <div class="co-founder">
-        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" alt="Co-Founder Image" class="founder-img">
+        <img src="co-founder.jpg" alt="Co-Founder Image" class="founder-img">
         <h2><span class="english-text">Co-Founder</span><span class="telugu-text">సహ-స్థాపకుడు</span></h2>
         <h3><span class="english-text">Bro. Billygraham Moses</span><span class="telugu-text">బ్రదర్ బిలీగ్రాహం మోసెస్</span></h3>
       </div>
@@ -614,7 +614,7 @@
   <!-- Chatbot Floating Button -->
   <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
     <div class="chatbot-wrapper">
-      <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=40&h=40&q=80" alt="Chat with Amma">
+      <img src="founder.jpg" alt="Chat with Amma">
       <span>
         <span class="english-text">Talk with Amma</span>
         <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
