--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,7 +148,7 @@
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/background.jpg');
       background-size: cover;
       background-position: center;
-      min-height: 70vh;
+      min-height: 60vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -261,10 +261,10 @@
     }
 
     .founder-container {
-      max-width: 800px;
+      max-width: 600px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200, 1fr));
       gap: 3rem;
       padding: 0 2rem;
     }
@@ -392,7 +392,7 @@
     }
 
     .footer-container {
-      max-width: 1200px;
+      max-width: 1000px;
       margin: 0 auto;
       padding: 0 2rem;
     }
