--- a/frontend/index.html
+++ b/frontend/index.html
@@ -255,56 +255,59 @@
     ============================================== */
 
     .founders-section {
-      background: linear-gradient(135deg, #000000 0%, #dc2626 50%, #000000 100%);
-      padding: 4rem 0;
-      margin-top: 4rem;
+      background: linear-gradient(135deg, #000000 0%, #dc2626 100%, #000000 100%);
+      padding: 2rem 0;
+      margin-top: 2rem;
+      border-top: 3px solid #dc2626;
+      border-bottom: 3px solid #dc2626;
+
     }
 
     .founder-container {
-      max-width: 800px;
+      max-width: 600px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250, 1fr));
-      gap: 3rem;
+      grid-template-columns: repeat(auto-fit, minmax(200, 1fr));
+      gap: 2rem;
       padding: 0 2rem;
     }
 
     .founder, .co-founder {
       text-align: center;
       background: rgba(255,255,255,0.95);
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       transition: all 0.3s ease;
-      border: 2px solid transparent;
+      border: 1px solid transparent;
     }
 
     .founder:hover, .co-founder:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 25px 45px rgba(220,38,38,0.3);
+      transform: translateY(-5px);
+      box-shadow: 0 15px 30px rgba(220,38,38,0.3);
       border: 2px solid #dc2626;
     }
 
     .founder-img {
-      width: 150px;
-      height: 150px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
       border: 5px solid #dc2626;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
 
     .founder h2, .co-founder h2 {
       color: #dc2626;
       margin-bottom: 0.5rem;
-      font-size: 1.3rem;
+      font-size: 1.1rem;
     }
 
     .founder h3, .co-founder h3 {
       color: #000000;
-      font-weight: 600;
-      font-size: 1.1rem;
+      font-weight: 500;
+      font-size: 1rem;
     }
 
     /* ==============================================
