--- a/frontend/index.html
+++ b/frontend/index.html
@@ -250,64 +250,101 @@
       border-top: 4px solid #dc2626;
     }
 
-    /* ==============================================
+/* ==============================================
        FOUNDER SECTION STYLES
     ============================================== */
 
     .founders-section {
-      background: linear-gradient(135deg, #000000 0%, #dc2626 100%, #000000 100%);
-      padding: 2rem 0;
+      background: linear-gradient(135deg, #000000 0%, #dc2626 50%, #000000 100%);
+      padding: 3rem 0;
       margin-top: 2rem;
       border-top: 3px solid #dc2626;
       border-bottom: 3px solid #dc2626;
+      position: relative;
+      overflow: hidden;
+    }
 
+    .founders-section::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at 50% 50%, rgba(220,38,38,0.1) 0%, transparent 70%);
+      pointer-events: none;
     }
 
     .founder-container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200, 1fr));
-      gap: 2rem;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2.5rem;
       padding: 0 2rem;
     }
 
     .founder, .co-founder {
       text-align: center;
-      background: rgba(255,255,255,0.95);
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      transition: all 0.3s ease;
-      border: 1px solid transparent;
+      background: rgba(255,255,255,0.98);
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 2px solid transparent;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .founder::before, .co-founder::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(220,38,38,0.1), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .founder:hover::before, .co-founder:hover::before {
+      left: 100%;
     }
 
     .founder:hover, .co-founder:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 30px rgba(220,38,38,0.3);
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 20px 40px rgba(220,38,38,0.25);
       border: 2px solid #dc2626;
     }
 
     .founder-img {
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 1rem;
-      border: 5px solid #dc2626;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      margin: 0 auto 1.5rem;
+      border: 4px solid #dc2626;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      transition: all 0.3s ease;
+    }
+
+    .founder:hover .founder-img, .co-founder:hover .founder-img {
+      transform: scale(1.1);
+      box-shadow: 0 12px 25px rgba(220,38,38,0.4);
     }
 
     .founder h2, .co-founder h2 {
       color: #dc2626;
       margin-bottom: 0.5rem;
-      font-size: 1.1rem;
+      font-size: 1.3rem;
+      font-weight: 600;
     }
 
     .founder h3, .co-founder h3 {
-      color: #000000;
+      color: #333333;
       font-weight: 500;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
 
     /* ==============================================
@@ -316,50 +353,56 @@
 
     .chatbot-button {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: linear-gradient(135deg, #dc2626 0%, #000000 100%);
+      bottom: 25px;
+      right: 25px;
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 50%, #000000 100%);
       border: 2px solid #dc2626;
-      border-radius: 50px;
-      padding: 15px 20px;
-      box-shadow: 0 8px 25px rgba(220,38,38,0.4);
+      border-radius: 60px;
+      padding: 18px 25px;
+      box-shadow: 0 10px 30px rgba(220,38,38,0.3);
       cursor: pointer;
       z-index: 1000;
-      transition: all 0.3s ease;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
     .chatbot-button:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(220,38,38,0.6);
-      background: linear-gradient(135deg, #b91c1c 0%, #000000 100%);
+      transform: translateY(-8px) scale(1.05);
+      box-shadow: 0 20px 45px rgba(220,38,38,0.5);
+      background: linear-gradient(135deg, #b91c1c 0%, #991b1b 50%, #000000 100%);
+    }
+
+    .chatbot-button:active {
+      transform: translateY(-5px) scale(1.02);
     }
 
     .chatbot-wrapper {
       display: flex;
       align-items: center;
       color: white;
-      font-weight: 500;
+      font-weight: 600;
     }
 
     .chatbot-wrapper img {
-      width: 40px;
-      height: 40px;
+      width: 45px;
+      height: 45px;
       border-radius: 50%;
-      margin-right: 10px;
+      margin-right: 12px;
+      border: 2px solid rgba(255,255,255,0.3);
     }
 
     .chatbot-popup {
       position: fixed;
-      bottom: 80px;
-      right: 20px;
-      width: 350px;
-      height: 450px;
+      bottom: 100px;
+      right: 25px;
+      width: 380px;
+      height: 500px;
       background: white;
-      border-radius: 15px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      border-radius: 20px;
+      box-shadow: 0 25px 50px rgba(0,0,0,0.15);
       z-index: 1001;
       overflow: hidden;
-      transition: all 0.3s ease;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 1px solid rgba(220,38,38,0.1);
     }
 
     .chatbot-popup.hidden {
@@ -367,20 +410,29 @@
     }
 
     .chatbot-header {
-      background: linear-gradient(135deg, #dc2626 0%, #000000 100%);
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 50%, #000000 100%);
       color: white;
-      padding: 15px;
+      padding: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     .close-button {
       background: none;
       border: none;
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       cursor: pointer;
+      transition: all 0.3s ease;
+      padding: 5px;
+      border-radius: 50%;
+    }
+
+    .close-button:hover {
+      background: rgba(255,255,255,0.2);
+      transform: scale(1.1);
     }
 
     /* ==============================================
@@ -388,10 +440,21 @@
     ============================================== */
 
     footer {
-      background: linear-gradient(135deg, #000000 0%, #333333 100%, #000000 100%);
+      background: linear-gradient(135deg, #000000 0%, #1a1a1a 50%, #333333 100%);
       color: white;
-      padding: 1.5rem 0;
+      padding: 2.5rem 0;
       text-align: center;
+      position: relative;
+    }
+
+    footer::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #dc2626, transparent);
     }
 
     .footer-container {
@@ -401,33 +464,35 @@
     }
 
     .social-icons {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      gap: 1.5rem;
     }
 
     .social-icons a {
       display: inline-block;
-      transition: transform 0.3s ease;
+      transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      position: relative;
     }
 
     .social-icons a:hover {
-      transform: translateY(-3px);
+      transform: translateY(-5px);
     }
 
     .social-icons img {
-      width: 40px;
-      height: 40px;
-      border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(220,38,38,0.3);
+      width: 45px;
+      height: 45px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(220,38,38,0.2);
       border: 2px solid transparent;
-      transition: all 0.3s ease;
+      transition: all 0.4s ease;
     }
 
     .social-icons img:hover {
       border: 2px solid #dc2626;
-      transform: scale(1.1);
+      transform: scale(1.15);
+      box-shadow: 0 10px 30px rgba(220,38,38,0.4);
     }
 
     /* ==============================================
@@ -437,11 +502,31 @@
     @keyframes fadeInUp {
       from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(40px);
       }
       to {
         opacity: 1;
         transform: translateY(0);
+      }
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+    }
+
+    @keyframes slideInFromRight {
+      from {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
       }
     }
 
@@ -459,11 +544,11 @@
       }
 
       .page-title {
-        font-size: 2rem;
+        font-size: 2.2rem;
       }
 
       .hero p {
-        font-size: 1rem;
+        font-size: 1.1rem;
       }
 
       .section-container {
@@ -474,11 +559,52 @@
       .founder-container {
         grid-template-columns: 1fr;
         gap: 2rem;
+        padding: 0 1rem;
       }
 
       .chatbot-popup {
-        width: 90vw;
-        right: 5vw;
+        width: 95vw;
+        right: 2.5vw;
+        height: 450px;
+      }
+
+      .chatbot-button {
+        bottom: 20px;
+        right: 20px;
+        padding: 15px 20px;
+      }
+
+      .chatbot-wrapper img {
+        width: 40px;
+        height: 40px;
+      }
+
+      .social-icons {
+        gap: 1rem;
+      }
+
+      .social-icons img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .founders-section {
+        padding: 2rem 0;
+      }
+
+      .founder, .co-founder {
+        padding: 1.5rem;
+      }
+
+      .founder-img {
+        width: 100px;
+        height: 100px;
+      }
+
+      .chatbot-popup {
+        height: 400px;
       }
     }
 
@@ -492,7 +618,24 @@
     body {
       font-family: 'Roboto', sans-serif;
       line-height: 1.6;
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 50%, #dee2e6 100%);
+      scroll-behavior: smooth;
+    }
+
+    /* ==============================================
+       ADDITIONAL ENHANCEMENTS
+    ============================================== */
+
+    .fade-in {
+      animation: fadeInUp 0.8s ease-out;
+    }
+
+    .slide-in-right {
+      animation: slideInFromRight 0.6s ease-out;
+    }
+
+    .pulse-animation {
+      animation: pulse 2s infinite;
     }
   </style>
 </head>
