--- a/frontend/about.html
+++ b/frontend/about.html
@@ -657,48 +657,59 @@
 
   
 
-  <!-- Main Content -->
-  <div class="main-content">
-    <!-- About Us Section -->
-    <div class="content-card">
-      <h1 class="section-title">
-        <span class="english-text">About Us</span>
-        <span class="telugu-text">మా గురించి</span>
-      </h1>
-      <p class="section-content">
-        <span class="english-text">
-          We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
-        </span>
-        <span class="telugu-text">
-          మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
-        </span>
-      </p>
-      
-      <div class="bible-verse">
-        <span class="english-text">
-          "Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins..." — Acts 2:38–39
-        </span>
-        <span class="telugu-text">
-          "మీ పాపముల క్షమాపణ కొరకు..." — అపొస్తలుల కార్యములు 2:38–39
-        </span>
-      </div>
-    </div>
+ <!-- Main Content -->
+<section class="main-content">
+  <!-- About Us Section -->
+  <section class="content-card">
+    <h1 class="section-title">
+      <span class="english-text" lang="en">About Us</span>
+      <span class="telugu-text" lang="te">మా గురించి</span>
+    </h1>
+    <p class="section-content">
+      <span class="english-text" lang="en">
+        We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
+      </span>
+      <span class="telugu-text" lang="te">
+        మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
+      </span>
+    </p>
 
-    <!-- Mission Section -->
-    <div class="content-card">
-      <h2 class="mission-title">
-        <span class="english-text">Our Mission (What We Do)</span>
-        <span class="telugu-text">మా లక్ష్యం</span>
-      </h2>
+    <div class="bible-verse">
+      <h3>
+        <span class="english-text" lang="en">Bible Verse - Acts 2:38–39</span>
+        <span class="telugu-text" lang="te">బైబిల్ వాక్యం - అపొస్తలుల కార్యములు 2:38–39</span>
+      </h3>
       <p class="section-content">
-        <span class="english-text">
-          We introduce our God the Father, His Son and our Friend Jesus, and the Holy Spirit to all who seek truth and salvation. Through prayer, worship, and community service, we strive to make a positive impact in the lives of those around us.
+        <span class="english-text" lang="en">
+          38 And Peter said to them, “Repent and be baptized every one of you in the name of Jesus Christ for the forgiveness of your sins, and you will receive the gift of the Holy Spirit.<br>
+          39 For the promise is for you and for your children and for all who are far off, everyone whom the Lord our God calls to himself.”
         </span>
-        <span class="telugu-text">
-          మేము మా పరలోక తండ్రిని, ఆయన కుమారుడైన యేసును, పవిత్రాత్మను సత్యం మరియు మోక్షం కోరే వారందరికీ పరిచయం చేస్తాము. ప్రార్థన, ఆరాధన మరియు సమాజ సేవ ద్వారా మన చుట్టూ ఉన్న వారి జీవితాలపై సానుకూల ప్రభావం చూపడానికి ప్రయత్నిస్తాము.
+        <br>
+        <span class="telugu-text" lang="te">
+          38 పేతురు వారితో ఇట్లనెను — మీరు పశ్చాత్తాపపడినవారై, మీ పాపముల క్షమాపణ కొరకు యేసుక్రీస్తునామములో బాప్తిస్మము పొందుడి; అప్పుడు మీరు పరిశుద్ధాత్మా అనుగ్రహమును పొందుదురు.<br>
+          39 ఎందుకనగా ఈ వాగ్దానం మీకును మీ సంతతికిని అంతకు దూరముగా ఉన్న వారికిని, మన దేవుడగు ప్రభువు ఎవరిని పిలుచునో వారందరికిని చెందియున్నది.
         </span>
       </p>
     </div>
+  </section>
+
+  <!-- Mission Section -->
+  <section class="content-card">
+    <h2 class="section-title">
+      <span class="english-text" lang="en">Our Mission (What We Do)</span>
+      <span class="telugu-text" lang="te">మా లక్ష్యం</span>
+    </h2>
+    <p class="section-content">
+      <span class="english-text" lang="en">
+        We introduce our God the Father, His Son and our Friend Jesus, and the Holy Spirit to all who seek truth and salvation. Through prayer, worship, and community service, we strive to make a positive impact in the lives of those around us.
+      </span>
+      <span class="telugu-text" lang="te">
+        మేము మా పరలోక తండ్రిని, ఆయన కుమారుడైన యేసును, పవిత్రాత్మను సత్యం మరియు మోక్షం కోరే వారందరికీ పరిచయం చేస్తాము. ప్రార్థన, ఆరాధన మరియు సమాజ సేవ ద్వారా మన చుట్టూ ఉన్న వారి జీవితాలపై సానుకూల ప్రభావం చూపడానికి ప్రయత్నిస్తాము.
+      </span>
+    </p>
+  </section>
+</section>
+
 
 
 
