--- a/frontend/about.html
+++ b/frontend/about.html
@@ -676,10 +676,12 @@
       
       <div class="bible-verse">
         <span class="english-text">
-          "Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins..." — Acts 2:38–39
+          38 And Peter said to them, “Repent and be baptized every one of you in the name of Jesus Christ for the forgiveness of your sins, and you will receive the gift of the Holy Spirit.<br>
+          39 For the promise is for you and for your children and for all who are far off, everyone whom the Lord our God calls to himself.” — Acts 2:38–39
         </span>
         <span class="telugu-text">
-          "మీ పాపముల క్షమాపణ కొరకు..." — అపొస్తలుల కార్యములు 2:38–39
+          38 పేతురు వారితో ఇట్లనెను — మీరు పశ్చాత్తాపపడినవారై, మీ పాపముల క్షమాపణ కొరకు యేసుక్రీస్తునామములో బాప్తిస్మము పొందుడి; అప్పుడు మీరు పరిశుద్ధాత్మా అనుగ్రహమును పొందుదురు.<br>
+          39 ఎందుకనగా ఈ వాగ్దానం మీకును మీ సంతతికిని అంతకు దూరముగా ఉన్న వారికిని, మన దేవుడగు ప్రభువు ఎవరిని పిలుచునో వారందరికిని చెందియున్నది. — అపొస్తలుల కార్యములు 2:38–39
         </span>
       </div>
     </section>
